# phantom

./: .gitignore  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md
benches/: crypto_benchmarks.rs
cli/: Cargo.toml
cli/src/: config.rs  logging.rs  main.rs
cli/src/commands/: init.rs  mod.rs  node.rs  status.rs  wallet.rs
consensus/cwa/: Cargo.toml
consensus/cwa/src/: attestation.rs  errors.rs  lib.rs  protocol.rs  threshold.rs  validator.rs  vrf.rs
contracts/: Cargo.toml
contracts/src/: abi.rs  contract.rs  errors.rs  lib.rs  opcodes.rs  state.rs  vm.rs
crypto/commitment/: Cargo.toml
crypto/commitment/src/: lib.rs  pedersen.rs
crypto/fhe/: Cargo.toml
crypto/fhe/src/: errors.rs  lib.rs
crypto/fhe/src/real_impl/: ciphertext.rs  keys.rs  mod.rs  operations.rs  server.rs
crypto/hash/: Cargo.toml
crypto/hash/src/: lib.rs  poseidon.rs
crypto/nova/: Cargo.toml
crypto/nova/src/: circuit.rs  errors.rs  folding.rs  groth16_prover.rs  lib.rs  prover.rs  r1cs_circuit.rs  types.rs  verifier.rs
crypto/pq/: Cargo.toml
crypto/pq/src/: dilithium.rs  errors.rs  hybrid.rs  kyber.rs  lib.rs  sphincs.rs
crypto/vrf/: Cargo.toml
crypto/vrf/src/: lib.rs
defi/: Cargo.toml
defi/src/: amm.rs  errors.rs  lending.rs  lib.rs  liquidity.rs  pool.rs  staking.rs  swap.rs
docs/: whitepaper.md
docs/business/: 01-executive-summary.md  02-ethereum-esp-grant-application.md  03-web3-foundation-grant-application.md  04-investor-pitch-deck.md  05-budget-template.md  06-accelerator-applications.md
docs/sale/: IP-DECLARATION.md  LISTING.md  SALE-PACKAGE.md  TRANSFER-AGREEMENT.md
genesis/: Cargo.toml
genesis/src/: builder.rs  config.rs  error.rs  lib.rs
light-client/: Cargo.toml
light-client/src/: client.rs  delegation.rs  errors.rs  header.rs  lib.rs  sync.rs  verification.rs
light-client/src/wasm/: mod.rs
network/mempool/: Cargo.toml
network/mempool/src/: errors.rs  lib.rs  threshold_encryption.rs
network/mixnet/: Cargo.toml
network/mixnet/.claude-flow/metrics/: performance.json  task-metrics.json
network/mixnet/src/: errors.rs  lib.rs  mix_node.rs  routing.rs  sphinx.rs  transport.rs
network/p2p/: Cargo.toml
network/p2p/src/: behaviour.rs  config.rs  errors.rs  lib.rs  messages.rs  swarm.rs  sync.rs
node/: Cargo.toml
node/src/: block.rs  chain.rs  error.rs  lib.rs  metrics.rs  producer.rs  state_manager.rs  sync.rs  transaction.rs  validator.rs  verifier.rs
rpc/: Cargo.toml
rpc/src/: errors.rs  lib.rs  methods.rs  server.rs  types.rs
src/: lib.rs  node.rs
state/esl/: Cargo.toml
state/esl/src/: commitment.rs  errors.rs  fragment.rs  lib.rs  nullifier.rs  state.rs  witness.rs
storage/: Cargo.toml
storage/src/: block.rs  chain.rs  error.rs  lib.rs  state.rs  tx.rs
tests/: crypto_integration.rs  phase2_integration.rs  phase3_integration.rs  phase4_integration.rs  phase5_integration.rs  property_tests.rs
wallet/: Cargo.toml
wallet/benches/: wallet_bench.rs
wallet/src/: hd.rs  keypair.rs  lib.rs  lifecycle.rs  note.rs  stealth.rs  transaction.rs
