[package]
name = "phantom"
version = "0.1.0"
edition = "2021"
authors = ["PHANTOM Team"]
license = "MIT OR Apache-2.0"
description = "PHANTOM: Privacy-First Cryptographic Network - Integration Tests & Benchmarks"

[workspace]
resolver = "2"
members = [
    "crypto/nova",
    "crypto/fhe",
    "crypto/pq",
    "crypto/hash",
    "crypto/commitment",
    "crypto/vrf",
    "consensus/cwa",
    "state/esl",
    "network/mixnet",
    "network/mempool",
    "network/p2p",
    "contracts",
    "wallet",
    "defi",
    "light-client",
    "rpc",
    "storage",
    "genesis",
    "cli",
    "node",
]

# Root package dependencies for integration tests
[dependencies]
phantom-pq = { path = "crypto/pq" }
# phantom-nova = { path = "crypto/nova" }  # Temporarily disabled
phantom-fhe = { path = "crypto/fhe" }
phantom-esl = { path = "state/esl" }
phantom-cwa = { path = "consensus/cwa" }
phantom-mixnet = { path = "network/mixnet" }
phantom-p2p = { path = "network/p2p" }
phantom-wallet = { path = "wallet" }
phantom-mempool = { path = "network/mempool" }
phantom-hash = { path = "crypto/hash" }
phantom-light-client = { path = "light-client" }
phantom-defi = { path = "defi" }
phantom-rpc = { path = "rpc" }
phantom-storage = { path = "storage" }
phantom-genesis = { path = "genesis" }
phantom-node = { path = "node" }
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
blake3 = { workspace = true }
curve25519-dalek = { version = "4.1", features = ["digest"] }
tempfile = "3.10"

[[bench]]
name = "crypto_benchmarks"
harness = false

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PHANTOM Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/phantom-network/phantom"
description = "PHANTOM: Privacy-First Cryptographic Network"

[workspace.dependencies]
# Core cryptography
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-crypto-primitives = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"

# Nova/folding schemes
# nova-snark = "0.5"  # Temporarily disabled due to transitive dependency issues

# FHE
tfhe = "0.5"

# Post-quantum
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"

# Hashing
blake3 = "1.5"
poseidon-ark = "0.0.1"

# Networking
libp2p = { version = "0.53", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
base64 = "0.21"

# Testing
criterion = "0.5"
proptest = "1.4"

# RPC
jsonrpsee = { version = "0.21", features = ["server", "macros"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

# Storage
rocksdb = "0.21"
redb = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
