[package]
name = "phantom-light-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PHANTOM Light Client - Header chain verification and sync protocol"

[dependencies]
# Workspace dependencies
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# Internal dependencies
phantom-hash = { path = "../crypto/hash" }
phantom-fhe = { path = "../crypto/fhe" }
phantom-pq = { path = "../crypto/pq" }

# Additional dependencies
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
tracing = { workspace = true }

# WASM bindings (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }
