[package]
name = "phantom-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PHANTOM persistent storage layer"

[dependencies]
# Storage backends
redb = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt", "macros"] }
