[package]
name = "phantom-pq"
version.workspace = true
edition.workspace = true
description = "Post-quantum cryptographic primitives for PHANTOM"

[dependencies]
pqcrypto-kyber.workspace = true
pqcrypto-dilithium.workspace = true
pqcrypto-sphincsplus.workspace = true
pqcrypto-traits = "0.3"
blake3.workspace = true
serde.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
zeroize = { version = "1.7", features = ["derive"] }
# Classical cryptography for hybrid schemes
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
