[package]
name = "phantom-mixnet"
version.workspace = true
edition.workspace = true
description = "P2P Mixnet layer for PHANTOM with Sphinx packets and Dandelion++"

[dependencies]
# P2P networking
libp2p.workspace = true
tokio.workspace = true

# Cryptography - Real implementations
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["digest"] }

# Serialization and utilities
blake3.workspace = true
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
rand.workspace = true
getrandom = "0.2"
zeroize = { version = "1.7", features = ["derive"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hex = "0.4"
